Modified html file

--- a/courses.html
+++ b/courses.html
@@ -6,17 +6,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="author" content="Ziad Wael">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/png" sizes="32x32" href="../Zoz-Template-2/imgs/avatar.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="../Elzero/imgs/avatar.png">
     <meta name="description" content="This is my page created by ziad wael">
     <title>Courses</title>
     <!-- main css file -->
-    <link rel="stylesheet" href="../Zoz-Template-2/css/main.css">
+    <link rel="stylesheet" href="../Elzero/css/main.css">
     <!-- dashboard css file -->
-    <link rel="stylesheet" href="../Zoz-Template-2/css/courses.css">
+    <link rel="stylesheet" href="../Elzero/css/courses.css">
     <!-- Frame work css file -->
-    <link rel="stylesheet" href="../Zoz-Template-2/css/framework.css">
+    <link rel="stylesheet" href="../Elzero/css/framework.css">
     <!-- Font Awesome 5 Free -->
-    <link rel="stylesheet" href="../Zoz-Template-2/css/all.min.css">
+    <link rel="stylesheet" href="../Elzero/css/all.min.css">
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;500&#038;display=swap" rel="stylesheet" />
@@ -89,7 +89,7 @@
                 <div class="icons">
                     <i class="bell fa-regular fa-bell fa-lg"></i>
                     <div class="image">
-                        <img src="../Zoz-Template-2/imgs/avatar.png" alt="profile">
+                        <img src="../Elzero/imgs/avatar.png" alt="profile">
                     </div>
                 </div>
             </header>
@@ -103,10 +103,10 @@
                 <div class="card">
                     <div class="images">
                         <div class="tr">
-                            <img class="back" src="../Zoz-Template-2/imgs/course-01.jpg" alt="not found">
+                            <img class="back" src="../Elzero/imgs/course-01.jpg" alt="not found">
                         </div>
                         <div class="icon">
-                            <img  src="../Zoz-Template-2/imgs/team-01.png" alt="not found">
+                            <img  src="../Elzero/imgs/team-01.png" alt="not found">
                         </div>
                     </div>
                     <div class="head">
@@ -129,10 +129,10 @@
                 <div class="card">
                     <div class="images">
                         <div class="tr">
-                            <img class="back" src="../Zoz-Template-2/imgs/course-02.jpg" alt="not found">
+                            <img class="back" src="../Elzero/imgs/course-02.jpg" alt="not found">
                         </div>
                         <div class="icon">
-                            <img  src="../Zoz-Template-2/imgs/team-02.png" alt="not found">
+                            <img  src="../Elzero/imgs/team-02.png" alt="not found">
                         </div>
                     </div>
                     <div class="head">
@@ -155,10 +155,10 @@
                 <div class="card">
                     <div class="images">
                         <div class="tr">
-                            <img class="back" src="../Zoz-Template-2/imgs/course-10.jpg" alt="not found">
+                            <img class="back" src="../Elzero/imgs/course-10.jpg" alt="not found">
                         </div>
                         <div class="icon">
-                            <img  src="../Zoz-Template-2/imgs/team-09.jpg" alt="not found">
+                            <img  src="../Elzero/imgs/team-09.jpg" alt="not found">
                         </div>
                     </div>
                     <div class="head">
@@ -181,10 +181,10 @@
                 <div class="card">
                     <div class="images">
                         <div class="tr">
-                            <img class="back" src="../Zoz-Template-2/imgs/course-11.jpg" alt="not found">
+                            <img class="back" src="../Elzero/imgs/course-11.jpg" alt="not found">
                         </div>
                         <div class="icon">
-                            <img  src="../Zoz-Template-2/imgs/team-08.jpg" alt="not found">
+                            <img  src="../Elzero/imgs/team-08.jpg" alt="not found">
                         </div>
                     </div>
                     <div class="head">
@@ -207,10 +207,10 @@
                 <div class="card">
                     <div class="images">
                         <div class="tr">
-                            <img class="back" src="../Zoz-Template-2/imgs/course-05.jpg" alt="not found">
+                            <img class="back" src="../Elzero/imgs/course-05.jpg" alt="not found">
                         </div>
                         <div class="icon">
-                            <img  src="../Zoz-Template-2/imgs/team-04.png" alt="not found">
+                            <img  src="../Elzero/imgs/team-04.png" alt="not found">
                         </div>
                     </div>
                     <div class="head">
@@ -233,10 +233,10 @@
                 <div class="card">
                     <div class="images">
                         <div class="tr">
-                            <img class="back" src="../Zoz-Template-2/imgs/course-02.jpg" alt="not found">
+                            <img class="back" src="../Elzero/imgs/course-02.jpg" alt="not found">
                         </div>
                         <div class="icon">
-                            <img  src="../Zoz-Template-2/imgs/team-03.png" alt="not found">
+                            <img  src="../Elzero/imgs/team-03.png" alt="not found">
                         </div>
                     </div>
                     <div class="head">
@@ -259,10 +259,10 @@
                 <div class="card">
                     <div class="images">
                         <div class="tr">
-                            <img class="back" src="../Zoz-Template-2/imgs/course-06.jpg" alt="not found">
+                            <img class="back" src="../Elzero/imgs/course-06.jpg" alt="not found">
                         </div>
                         <div class="icon">
-                            <img  src="../Zoz-Template-2/imgs/team-10.jpg" alt="not found">
+                            <img  src="../Elzero/imgs/team-10.jpg" alt="not found">
                         </div>
                     </div>
                     <div class="head">
@@ -285,10 +285,10 @@
                 <div class="card">
                     <div class="images">
                         <div class="tr">
-                            <img class="back" src="../Zoz-Template-2/imgs/course-08.jpg" alt="not found">
+                            <img class="back" src="../Elzero/imgs/course-08.jpg" alt="not found">
                         </div>
                         <div class="icon">
-                            <img  src="../Zoz-Template-2/imgs/team-08.jpg" alt="not found">
+                            <img  src="../Elzero/imgs/team-08.jpg" alt="not found">
                         </div>
                     </div>
                     <div class="head">
@@ -311,10 +311,10 @@
                 <div class="card">
                     <div class="images">
                         <div class="tr">
-                            <img class="back" src="../Zoz-Template-2/imgs/course-09.jpg" alt="not found">
+                            <img class="back" src="../Elzero/imgs/course-09.jpg" alt="not found">
                         </div>
                         <div class="icon">
-                            <img  src="../Zoz-Template-2/imgs/team-07.jpg" alt="not found">
+                            <img  src="../Elzero/imgs/team-07.jpg" alt="not found">
                         </div>
                     </div>
                     <div class="head">
@@ -337,10 +337,10 @@
                 <div class="card">
                     <div class="images">
                         <div class="tr">
-                            <img class="back" src="../Zoz-Template-2/imgs/course-07.jpg" alt="not found">
+                            <img class="back" src="../Elzero/imgs/course-07.jpg" alt="not found">
                         </div>
                         <div class="icon">
-                            <img  src="../Zoz-Template-2/imgs/team-06.jpg" alt="not found">
+                            <img  src="../Elzero/imgs/team-06.jpg" alt="not found">
                         </div>
                     </div>
                     <div class="head">
