--- a/dashboard.html
+++ b/dashboard.html
@@ -6,17 +6,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="author" content="Ziad Wael">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/png" sizes="32x32" href="../Zoz-Template-2/imgs/avatar.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="../Elzero/imgs/avatar.png">
     <meta name="description" content="This is my page created by ziad wael">
     <title>Dashboard</title>
     <!-- main css file -->
-    <link rel="stylesheet" href="../Zoz-Template-2/css/main.css">
+    <link rel="stylesheet" href="../Elzero/css/main.css">
     <!-- dashboard css file -->
-    <link rel="stylesheet" href="../Zoz-Template-2/css/dashboard.css">
+    <link rel="stylesheet" href="../Elzero/css/dashboard.css">
     <!-- Frame work css file -->
-    <link rel="stylesheet" href="../Zoz-Template-2/css/framework.css">
+    <link rel="stylesheet" href="../Elzero/css/framework.css">
     <!-- Font Awesome 5 Free -->
-    <link rel="stylesheet" href="../Zoz-Template-2/css/all.min.css">
+    <link rel="stylesheet" href="../Elzero/css/all.min.css">
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;500&#038;display=swap" rel="stylesheet" />
@@ -89,7 +89,7 @@
                 <div class="icons">
                     <i class="bell fa-regular fa-bell fa-lg"></i>
                     <div class="image">
-                        <img src="../Zoz-Template-2/imgs/avatar.png" alt="profile">
+                        <img src="../Elzero/imgs/avatar.png" alt="profile">
                     </div>
                 </div>
             </header>
@@ -107,10 +107,10 @@
                             <p>El zoz</p>
                         </div>
                         <div class="image">
-                            <img src="../Zoz-Template-2/imgs/welcome.png" alt="Welcome">
+                            <img src="../Elzero/imgs/welcome.png" alt="Welcome">
                         </div>
                     </div>
-                    <img class="avatar" src="../Zoz-Template-2/imgs/avatar-01.jpg" alt="not found">
+                    <img class="avatar" src="../Elzero/imgs/avatar-01.jpg" alt="not found">
                     <div class="inf">
                         <div class="name">
                             ziad wael
@@ -225,7 +225,7 @@
                     </div>
                     <div class="holder">
                         <div class="cards">
-                            <img src="../Zoz-Template-2/imgs/news-11.jpg" alt="Not Found">
+                            <img src="../Elzero/imgs/news-11.jpg" alt="Not Found">
                             <div class="text">
                                 <div class="inf">
                                     <span class="title">Created SASS Section</span>
@@ -237,7 +237,7 @@
                             </div>
                         </div>
                         <div class="cards">
-                            <img src="../Zoz-Template-2/imgs/news-05.jpg" alt="Not Found">
+                            <img src="../Elzero/imgs/news-05.jpg" alt="Not Found">
                             <div class="text">
                                 <div class="inf">
                                     <span class="title">Changed The Design</span>
@@ -249,7 +249,7 @@
                             </div>
                         </div>
                         <div class="cards">
-                            <img src="../Zoz-Template-2/imgs/news-06.jpeg" alt="Not Found">
+                            <img src="../Elzero/imgs/news-06.jpeg" alt="Not Found">
                             <div class="text">
                                 <div class="inf">
                                     <span class="title">Team Increased</span>
@@ -261,7 +261,7 @@
                             </div>
                         </div>
                         <div class="cards">
-                            <img src="../Zoz-Template-2/imgs/news-10.png" alt="Not Found">
+                            <img src="../Elzero/imgs/news-10.png" alt="Not Found">
                             <div class="text">
                                 <div class="inf">
                                     <span class="title">Added Payment Gateway</span>
@@ -356,7 +356,7 @@
                     </div>
 
                     <div class="file">
-                        <img src="../Zoz-Template-2/imgs/pdf.svg" alt="not found">
+                        <img src="../Elzero/imgs/pdf.svg" alt="not found">
                         <div class="holder">
                             <div class="inf">
                                 My-File.pdf
@@ -367,7 +367,7 @@
                     </div>
 
                     <div class="file">
-                        <img src="../Zoz-Template-2/imgs/avi.svg" alt="not found">
+                        <img src="../Elzero/imgs/avi.svg" alt="not found">
                         <div class="holder">
                             <div class="inf">
                                 My-Video-File.avi
@@ -378,7 +378,7 @@
                     </div>
 
                     <div class="file">
-                        <img src="../Zoz-Template-2/imgs/psd.svg" alt="not found">
+                        <img src="../Elzero/imgs/psd.svg" alt="not found">
                         <div class="holder">
                             <div class="inf">
                                 My-Psd-File.pdf
@@ -389,7 +389,7 @@
                     </div>
 
                     <div class="file">
-                        <img src="../Zoz-Template-2/imgs/zip.svg" alt="not found">
+                        <img src="../Elzero/imgs/zip.svg" alt="not found">
                         <div class="holder">
                             <div class="inf">
                                 My-Zip-File.pdf
@@ -400,7 +400,7 @@
                     </div>
 
                     <div class="file">
-                        <img src="../Zoz-Template-2/imgs/dll.svg" alt="not found">
+                        <img src="../Elzero/imgs/dll.svg" alt="not found">
                         <div class="holder">
                             <div class="inf">
                                 My-DLL-File.pdf
@@ -411,7 +411,7 @@
                     </div>
 
                     <div class="file">
-                        <img src="../Zoz-Template-2/imgs/eps.svg" alt="not found">
+                        <img src="../Elzero/imgs/eps.svg" alt="not found">
                         <div class="holder">
                             <div class="inf">
                                 My-Eps-File.pdf
@@ -434,7 +434,7 @@
                         <li class="anim">Test The Project</li>
                         <li class="none">Finish The Project & Get Money</li>
                     </ul>
-                    <img src="../Zoz-Template-2/imgs/project.png" alt="not found">
+                    <img src="../Elzero/imgs/project.png" alt="not found">
                 </div>
 
                 <div class="box reminders">
@@ -469,7 +469,7 @@
                         <h2>latest post</h2>
                     </div>
                     <div class="intro">
-                        <img src="../Zoz-Template-2/imgs/avatar-01.jpg" alt="profile">
+                        <img src="../Elzero/imgs/avatar-01.jpg" alt="profile">
                         <div class="text">
                             Ziad Wael
                             <span>About 3 Hours Ago </span>
@@ -554,10 +554,10 @@
                                     <td>Ministry</td>
                                     <td>$5300</td>
                                     <td>
-                                        <img src="../Zoz-Template-2/imgs/team-06.jpg" alt="not found">
-                                        <img src="../Zoz-Template-2/imgs/team-07.jpg" alt="not found">
-                                        <img src="../Zoz-Template-2/imgs/team-09.jpg" alt="not found">
-                                        <img src="../Zoz-Template-2/imgs/team-08.jpg" alt="not found">
+                                        <img src="../Elzero/imgs/team-06.jpg" alt="not found">
+                                        <img src="../Elzero/imgs/team-07.jpg" alt="not found">
+                                        <img src="../Elzero/imgs/team-09.jpg" alt="not found">
+                                        <img src="../Elzero/imgs/team-08.jpg" alt="not found">
                                     </td>
                                     <td><span class="orange">Pending</span></td>
                                 </tr>
@@ -567,9 +567,9 @@
                                     <td>ziad Company</td>
                                     <td>$1500</td>
                                     <td>
-                                        <img src="../Zoz-Template-2/imgs/team-01.png" alt="not found">
-                                        <img src="../Zoz-Template-2/imgs/team-02.png" alt="not found">
-                                        <img src="../Zoz-Template-2/imgs/team-11.jpg" alt="not found">
+                                        <img src="../Elzero/imgs/team-01.png" alt="not found">
+                                        <img src="../Elzero/imgs/team-02.png" alt="not found">
+                                        <img src="../Elzero/imgs/team-11.jpg" alt="not found">
                                     </td>
                                     <td><span class="blue">in progress</span></td>
                                 </tr>
@@ -579,8 +579,8 @@
                                     <td>Bouba</td>
                                     <td>$800</td>
                                     <td>
-                                        <img src="../Zoz-Template-2/imgs/team-10.jpg" alt="not found">
-                                        <img src="../Zoz-Template-2/imgs/team-03.png" alt="not found">
+                                        <img src="../Elzero/imgs/team-10.jpg" alt="not found">
+                                        <img src="../Elzero/imgs/team-03.png" alt="not found">
                                     </td>
                                     <td><span class="green">Completed</span></td>
                                 </tr>
@@ -590,8 +590,8 @@
                                     <td>Mahmoud</td>
                                     <td>$600</td>
                                     <td>
-                                        <img src="../Zoz-Template-2/imgs/team-07.jpg" alt="not found">
-                                        <img src="../Zoz-Template-2/imgs/team-09.jpg" alt="not found">
+                                        <img src="../Elzero/imgs/team-07.jpg" alt="not found">
+                                        <img src="../Elzero/imgs/team-09.jpg" alt="not found">
                                     </td>
                                     <td><span class="green">Completed</span></td>
                                 </tr>
@@ -601,8 +601,8 @@
                                     <td>Sayed</td>
                                     <td>$300</td>
                                     <td>
-                                        <img src="../Zoz-Template-2/imgs/team-06.jpg" alt="not found">
-                                        <img src="../Zoz-Template-2/imgs/team-08.jpg" alt="not found">
+                                        <img src="../Elzero/imgs/team-06.jpg" alt="not found">
+                                        <img src="../Elzero/imgs/team-08.jpg" alt="not found">
                                     </td>
                                     <td><span class="red">Rejected</span></td>
                                 </tr>
@@ -612,10 +612,10 @@
                                     <td>Arena Company</td>
                                     <td>$2600</td>
                                     <td>
-                                        <img src="../Zoz-Template-2/imgs/team-07.jpg" alt="not found">
-                                        <img src="../Zoz-Template-2/imgs/team-09.jpg" alt="not found">
-                                        <img src="../Zoz-Template-2/imgs/team-05.png" alt="not found">
-                                        <img src="../Zoz-Template-2/imgs/team-11.jpg" alt="not found">
+                                        <img src="../Elzero/imgs/team-07.jpg" alt="not found">
+                                        <img src="../Elzero/imgs/team-09.jpg" alt="not found">
+                                        <img src="../Elzero/imgs/team-05.png" alt="not found">
+                                        <img src="../Elzero/imgs/team-11.jpg" alt="not found">
                                     </td>
                                     <td><span class="green">Completed</span></td>
                                 </tr>
