--- a/friends.html
+++ b/friends.html
@@ -6,17 +6,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="author" content="Ziad Wael">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/png" sizes="32x32" href="../Zoz-Template-2/imgs/avatar.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="../Elzero/imgs/avatar.png">
     <meta name="description" content="This is my page created by ziad wael">
     <title>Friends</title>
     <!-- main css file -->
-    <link rel="stylesheet" href="../Zoz-Template-2/css/main.css">
+    <link rel="stylesheet" href="../Elzero/css/main.css">
     <!-- dashboard css file -->
-    <link rel="stylesheet" href="../Zoz-Template-2/css/friends.css">
+    <link rel="stylesheet" href="../Elzero/css/friends.css">
     <!-- Frame work css file -->
-    <link rel="stylesheet" href="../Zoz-Template-2/css/framework.css">
+    <link rel="stylesheet" href="../Elzero/css/framework.css">
     <!-- Font Awesome 5 Free -->
-    <link rel="stylesheet" href="../Zoz-Template-2/css/all.min.css">
+    <link rel="stylesheet" href="../Elzero/css/all.min.css">
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;500&#038;display=swap" rel="stylesheet" />
@@ -89,7 +89,7 @@
                 <div class="icons">
                     <i class="bell fa-regular fa-bell fa-lg"></i>
                     <div class="image">
-                        <img src="../Zoz-Template-2/imgs/avatar.png" alt="profile">
+                        <img src="../Elzero/imgs/avatar.png" alt="profile">
                     </div>
                 </div>
             </header>
@@ -106,7 +106,7 @@
                         <i class="fa-regular fa-envelope"></i>
                     </div>
                     <div class="avatar">
-                        <img src="../Zoz-Template-2/imgs/friends-15.jpg" alt="not found">
+                        <img src="../Elzero/imgs/friends-15.jpg" alt="not found">
                         <h4>Ziad Wael</h4>
                         <p>JavaScript Developer</p>
                     </div>
@@ -142,7 +142,7 @@
                         <i class="fa-regular fa-envelope"></i>
                     </div>
                     <div class="avatar">
-                        <img src="../Zoz-Template-2/imgs/friends-06.jpg" alt="not found">
+                        <img src="../Elzero/imgs/friends-06.jpg" alt="not found">
                         <h4>James Smith</h4>
                         <p>Cloud Developer</p>
                     </div>
@@ -177,7 +177,7 @@
                         <i class="fa-regular fa-envelope"></i>
                     </div>
                     <div class="avatar">
-                        <img src="../Zoz-Template-2/imgs/friends-07.jpg" alt="not found">
+                        <img src="../Elzero/imgs/friends-07.jpg" alt="not found">
                         <h4>Robert Brian</h4>
                         <p>Mobile Developer</p>
                     </div>
@@ -212,7 +212,7 @@
                         <i class="fa-regular fa-envelope"></i>
                     </div>
                     <div class="avatar">
-                        <img src="../Zoz-Template-2/imgs/friends-08.jfif" alt="not found">
+                        <img src="../Elzero/imgs/friends-08.jfif" alt="not found">
                         <h4>Mariana Luis</h4>
                         <p>Back-End Developer</p>
                     </div>
@@ -247,7 +247,7 @@
                         <i class="fa-regular fa-envelope"></i>
                     </div>
                     <div class="avatar">
-                        <img src="../Zoz-Template-2/imgs/friends-09.png" alt="not found">
+                        <img src="../Elzero/imgs/friends-09.png" alt="not found">
                         <h4>Jason Steven</h4>
                         <p>Algorithm Developer</p>
                     </div>
@@ -282,7 +282,7 @@
                         <i class="fa-regular fa-envelope"></i>
                     </div>
                     <div class="avatar">
-                        <img src="../Zoz-Template-2/imgs/friends-10.jfif" alt="not found">
+                        <img src="../Elzero/imgs/friends-10.jfif" alt="not found">
                         <h4>Lucy Martin</h4>
                         <p>Back-End Developer</p>
                     </div>
@@ -317,7 +317,7 @@
                         <i class="fa-regular fa-envelope"></i>
                     </div>
                     <div class="avatar">
-                        <img src="../Zoz-Template-2/imgs/friends-11.jfif" alt="not found">
+                        <img src="../Elzero/imgs/friends-11.jfif" alt="not found">
                         <h4>Paul John</h4>
                         <p>Cloud Developer</p>
                     </div>
@@ -352,7 +352,7 @@
                         <i class="fa-regular fa-envelope"></i>
                     </div>
                     <div class="avatar">
-                        <img src="../Zoz-Template-2/imgs/friends-13.jfif" alt="not found">
+                        <img src="../Elzero/imgs/friends-13.jfif" alt="not found">
                         <h4>Robert Micheal</h4>
                         <p>Content Creator</p>
                     </div>
@@ -387,7 +387,7 @@
                         <i class="fa-regular fa-envelope"></i>
                     </div>
                     <div class="avatar">
-                        <img src="../Zoz-Template-2/imgs/friends-12.avif" alt="not found">
+                        <img src="../Elzero/imgs/friends-12.avif" alt="not found">
                         <h4>Diana Eric</h4>
                         <p>JavaScript Developer</p>
                     </div>
@@ -422,7 +422,7 @@
                         <i class="fa-regular fa-envelope"></i>
                     </div>
                     <div class="avatar">
-                        <img src="../Zoz-Template-2/imgs/friends-14.jpg" alt="not found">
+                        <img src="../Elzero/imgs/friends-14.jpg" alt="not found">
                         <h4>Peter Calvin</h4>
                         <p>Front-End Developer</p>
                     </div>
