--- a/settings.html
+++ b/settings.html
@@ -6,17 +6,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="author" content="Ziad Wael">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/png" sizes="32x32" href="../Zoz-Template-2/imgs/avatar.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="../Elzero/imgs/avatar.png">
     <meta name="description" content="This is my page created by ziad wael">
     <title>Settings</title>
     <!-- main css file -->
-    <link rel="stylesheet" href="../Zoz-Template-2/css/main.css">
+    <link rel="stylesheet" href="../Elzero/css/main.css">
     <!-- dashboard css file -->
-    <link rel="stylesheet" href="../Zoz-Template-2/css/settings.css">
+    <link rel="stylesheet" href="../Elzero/css/settings.css">
     <!-- Frame work css file -->
-    <link rel="stylesheet" href="../Zoz-Template-2/css/framework.css">
+    <link rel="stylesheet" href="../Elzero/css/framework.css">
     <!-- Font Awesome 5 Free -->
-    <link rel="stylesheet" href="../Zoz-Template-2/css/all.min.css">
+    <link rel="stylesheet" href="../Elzero/css/all.min.css">
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;500&#038;display=swap" rel="stylesheet" />
@@ -89,7 +89,7 @@
                 <div class="icons">
                     <i class="bell fa-regular fa-bell fa-lg"></i>
                     <div class="image">
-                        <img src="../Zoz-Template-2/imgs/avatar.png" alt="profile">
+                        <img src="../Elzero/imgs/avatar.png" alt="profile">
                     </div>
                 </div>
             </header>
