--- a/files.html
+++ b/files.html
@@ -6,17 +6,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="author" content="Ziad Wael">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/png" sizes="32x32" href="../Zoz-Template-2/imgs/avatar.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="../Elzero/imgs/avatar.png">
     <meta name="description" content="This is my page created by ziad wael">
     <title>Files</title>
     <!-- main css file -->
-    <link rel="stylesheet" href="../Zoz-Template-2/css/main.css">
+    <link rel="stylesheet" href="../Elzero/css/main.css">
     <!-- dashboard css file -->
-    <link rel="stylesheet" href="../Zoz-Template-2/css/files.css">
+    <link rel="stylesheet" href="../Elzero/css/files.css">
     <!-- Frame work css file -->
-    <link rel="stylesheet" href="../Zoz-Template-2/css/framework.css">
+    <link rel="stylesheet" href="../Elzero/css/framework.css">
     <!-- Font Awesome 5 Free -->
-    <link rel="stylesheet" href="../Zoz-Template-2/css/all.min.css">
+    <link rel="stylesheet" href="../Elzero/css/all.min.css">
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;500&#038;display=swap" rel="stylesheet" />
@@ -89,7 +89,7 @@
                 <div class="icons">
                     <i class="bell fa-regular fa-bell fa-lg"></i>
                     <div class="image">
-                        <img src="../Zoz-Template-2/imgs/avatar.png" alt="profile">
+                        <img src="../Elzero/imgs/avatar.png" alt="profile">
                     </div>
                 </div>
             </header>
@@ -103,7 +103,7 @@
                     <div class="card pdf">
                         <div class="file-top">
                             <i class="fa-solid fa-download c-grey p-absolute"></i>
-                            <img src="../Zoz-Template-2/imgs/pdf.svg" alt="not found">
+                            <img src="../Elzero/imgs/pdf.svg" alt="not found">
                             <span>my-file.pdf</span>
                             <p>Elzoz</p>
                         </div>
@@ -116,7 +116,7 @@
                     <div class="card avi">
                         <div class="file-top">
                             <i class="fa-solid fa-download c-grey p-absolute"></i>
-                            <img src="../Zoz-Template-2/imgs/avi.svg" alt="not found">
+                            <img src="../Elzero/imgs/avi.svg" alt="not found">
                             <span>my-file.avi</span>
                             <p>Admin</p>
                         </div>
@@ -129,7 +129,7 @@
                     <div class="card eps">
                         <div class="file-top">
                             <i class="fa-solid fa-download c-grey p-absolute"></i>
-                            <img src="../Zoz-Template-2/imgs/eps.svg" alt="not found">
+                            <img src="../Elzero/imgs/eps.svg" alt="not found">
                             <span>my-file.eps</span>
                             <p>Uploader</p>
                         </div>
@@ -142,7 +142,7 @@
                     <div class="card psd">
                         <div class="file-top">
                             <i class="fa-solid fa-download c-grey p-absolute"></i>
-                            <img src="../Zoz-Template-2/imgs/psd.svg" alt="not found">
+                            <img src="../Elzero/imgs/psd.svg" alt="not found">
                             <span>my-file.psd</span>
                             <p>Ziad</p>
                         </div>
@@ -155,7 +155,7 @@
                     <div class="card dll">
                         <div class="file-top">
                             <i class="fa-solid fa-download c-grey p-absolute"></i>
-                            <img src="../Zoz-Template-2/imgs/dll.svg" alt="not found">
+                            <img src="../Elzero/imgs/dll.svg" alt="not found">
                             <span>my-file.dll</span>
                             <p>Coder</p>
                         </div>
@@ -168,7 +168,7 @@
                     <div class="card png">
                         <div class="file-top">
                             <i class="fa-solid fa-download c-grey p-absolute"></i>
-                            <img src="../Zoz-Template-2/imgs/png.svg" alt="not found">
+                            <img src="../Elzero/imgs/png.svg" alt="not found">
                             <span>my-file.png</span>
                             <p>Designer</p>
                         </div>
@@ -181,7 +181,7 @@
                     <div class="card dll">
                         <div class="file-top">
                             <i class="fa-solid fa-download c-grey p-absolute"></i>
-                            <img src="../Zoz-Template-2/imgs/dll.svg" alt="not found">
+                            <img src="../Elzero/imgs/dll.svg" alt="not found">
                             <span>my-file.dll</span>
                             <p>Coder</p>
                         </div>
@@ -194,7 +194,7 @@
                     <div class="card png">
                         <div class="file-top">
                             <i class="fa-solid fa-download c-grey p-absolute"></i>
-                            <img src="../Zoz-Template-2/imgs/png.svg" alt="not found">
+                            <img src="../Elzero/imgs/png.svg" alt="not found">
                             <span>my-file.png</span>
                             <p>Designer</p>
                         </div>
@@ -207,7 +207,7 @@
                     <div class="card psd">
                         <div class="file-top">
                             <i class="fa-solid fa-download c-grey p-absolute"></i>
-                            <img src="../Zoz-Template-2/imgs/psd.svg" alt="not found">
+                            <img src="../Elzero/imgs/psd.svg" alt="not found">
                             <span>my-file.psd</span>
                             <p>Ziad</p>
                         </div>
@@ -220,7 +220,7 @@
                     <div class="card pdf">
                         <div class="file-top">
                             <i class="fa-solid fa-download c-grey p-absolute"></i>
-                            <img src="../Zoz-Template-2/imgs/pdf.svg" alt="not found">
+                            <img src="../Elzero/imgs/pdf.svg" alt="not found">
                             <span>my-file.pdf</span>
                             <p>Elzoz</p>
                         </div>
@@ -233,7 +233,7 @@
                     <div class="card avi">
                         <div class="file-top">
                             <i class="fa-solid fa-download c-grey p-absolute"></i>
-                            <img src="../Zoz-Template-2/imgs/avi.svg" alt="not found">
+                            <img src="../Elzero/imgs/avi.svg" alt="not found">
                             <span>my-file.avi</span>
                             <p>Admin</p>
                         </div>
@@ -246,7 +246,7 @@
                     <div class="card eps">
                         <div class="file-top">
                             <i class="fa-solid fa-download c-grey p-absolute"></i>
-                            <img src="../Zoz-Template-2/imgs/eps.svg" alt="not found">
+                            <img src="../Elzero/imgs/eps.svg" alt="not found">
                             <span>my-file.eps</span>
                             <p>Uploader</p>
                         </div>
@@ -259,7 +259,7 @@
                     <div class="card pdf">
                         <div class="file-top">
                             <i class="fa-solid fa-download c-grey p-absolute"></i>
-                            <img src="../Zoz-Template-2/imgs/pdf.svg" alt="not found">
+                            <img src="../Elzero/imgs/pdf.svg" alt="not found">
                             <span>my-file.pdf</span>
                             <p>Elzoz</p>
                         </div>
@@ -272,7 +272,7 @@
                     <div class="card avi">
                         <div class="file-top">
                             <i class="fa-solid fa-download c-grey p-absolute"></i>
-                            <img src="../Zoz-Template-2/imgs/avi.svg" alt="not found">
+                            <img src="../Elzero/imgs/avi.svg" alt="not found">
                             <span>my-file.avi</span>
                             <p>Admin</p>
                         </div>
@@ -285,7 +285,7 @@
                     <div class="card eps">
                         <div class="file-top">
                             <i class="fa-solid fa-download c-grey p-absolute"></i>
-                            <img src="../Zoz-Template-2/imgs/eps.svg" alt="not found">
+                            <img src="../Elzero/imgs/eps.svg" alt="not found">
                             <span>my-file.eps</span>
                             <p>Uploader</p>
                         </div>
@@ -298,7 +298,7 @@
                     <div class="card psd">
                         <div class="file-top">
                             <i class="fa-solid fa-download c-grey p-absolute"></i>
-                            <img src="../Zoz-Template-2/imgs/psd.svg" alt="not found">
+                            <img src="../Elzero/imgs/psd.svg" alt="not found">
                             <span>my-file.psd</span>
                             <p>Ziad</p>
                         </div>
@@ -311,7 +311,7 @@
                     <div class="card dll">
                         <div class="file-top">
                             <i class="fa-solid fa-download c-grey p-absolute"></i>
-                            <img src="../Zoz-Template-2/imgs/dll.svg" alt="not found">
+                            <img src="../Elzero/imgs/dll.svg" alt="not found">
                             <span>my-file.dll</span>
                             <p>Coder</p>
                         </div>
@@ -324,7 +324,7 @@
                     <div class="card png">
                         <div class="file-top">
                             <i class="fa-solid fa-download c-grey p-absolute"></i>
-                            <img src="../Zoz-Template-2/imgs/png.svg" alt="not found">
+                            <img src="../Elzero/imgs/png.svg" alt="not found">
                             <span>my-file.png</span>
                             <p>Designer</p>
                         </div>
@@ -337,7 +337,7 @@
                     <div class="card dll">
                         <div class="file-top">
                             <i class="fa-solid fa-download c-grey p-absolute"></i>
-                            <img src="../Zoz-Template-2/imgs/dll.svg" alt="not found">
+                            <img src="../Elzero/imgs/dll.svg" alt="not found">
                             <span>my-file.dll</span>
                             <p>Coder</p>
                         </div>
@@ -350,7 +350,7 @@
                     <div class="card png">
                         <div class="file-top">
                             <i class="fa-solid fa-download c-grey p-absolute"></i>
-                            <img src="../Zoz-Template-2/imgs/png.svg" alt="not found">
+                            <img src="../Elzero/imgs/png.svg" alt="not found">
                             <span>my-file.png</span>
                             <p>Designer</p>
                         </div>
@@ -363,7 +363,7 @@
                     <div class="card psd">
                         <div class="file-top">
                             <i class="fa-solid fa-download c-grey p-absolute"></i>
-                            <img src="../Zoz-Template-2/imgs/psd.svg" alt="not found">
+                            <img src="../Elzero/imgs/psd.svg" alt="not found">
                             <span>my-file.psd</span>
                             <p>Ziad</p>
                         </div>
@@ -376,7 +376,7 @@
                     <div class="card pdf">
                         <div class="file-top">
                             <i class="fa-solid fa-download c-grey p-absolute"></i>
-                            <img src="../Zoz-Template-2/imgs/pdf.svg" alt="not found">
+                            <img src="../Elzero/imgs/pdf.svg" alt="not found">
                             <span>my-file.pdf</span>
                             <p>Elzoz</p>
                         </div>
@@ -389,7 +389,7 @@
                     <div class="card avi">
                         <div class="file-top">
                             <i class="fa-solid fa-download c-grey p-absolute"></i>
-                            <img src="../Zoz-Template-2/imgs/avi.svg" alt="not found">
+                            <img src="../Elzero/imgs/avi.svg" alt="not found">
                             <span>my-file.avi</span>
                             <p>Admin</p>
                         </div>
@@ -402,7 +402,7 @@
                     <div class="card eps">
                         <div class="file-top">
                             <i class="fa-solid fa-download c-grey p-absolute"></i>
-                            <img src="../Zoz-Template-2/imgs/eps.svg" alt="not found">
+                            <img src="../Elzero/imgs/eps.svg" alt="not found">
                             <span>my-file.eps</span>
                             <p>Uploader</p>
                         </div>
