--- a/profile.html
+++ b/profile.html
@@ -6,17 +6,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="author" content="Ziad Wael">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/png" sizes="32x32" href="../Zoz-Template-2/imgs/avatar.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="../Elzero/imgs/avatar.png">
     <meta name="description" content="This is my page created by ziad wael">
     <title>Profile</title>
     <!-- main css file -->
-    <link rel="stylesheet" href="../Zoz-Template-2/css/main.css">
+    <link rel="stylesheet" href="../Elzero/css/main.css">
     <!-- dashboard css file -->
-    <link rel="stylesheet" href="../Zoz-Template-2/css/profile.css">
+    <link rel="stylesheet" href="../Elzero/css/profile.css">
     <!-- Frame work css file -->
-    <link rel="stylesheet" href="../Zoz-Template-2/css/framework.css">
+    <link rel="stylesheet" href="../Elzero/css/framework.css">
     <!-- Font Awesome 5 Free -->
-    <link rel="stylesheet" href="../Zoz-Template-2/css/all.min.css">
+    <link rel="stylesheet" href="../Elzero/css/all.min.css">
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;500&#038;display=swap" rel="stylesheet" />
@@ -89,7 +89,7 @@
                 <div class="icons">
                     <i class="bell fa-regular fa-bell fa-lg"></i>
                     <div class="image">
-                        <img src="../Zoz-Template-2/imgs/avatar.png" alt="profile">
+                        <img src="../Elzero/imgs/avatar.png" alt="profile">
                     </div>
                 </div>
             </header>
@@ -101,7 +101,7 @@
             <div class="top">
                 <div class="box information">
                     <div class="avatar">
-                        <img src="../Zoz-Template-2/imgs/avatar.png" alt="profile">
+                        <img src="../Elzero/imgs/avatar.png" alt="profile">
                         <h3>Ziad Wael</h3>
                         <p class="level">Level 20</p>
                         <div class="prog-holder">
@@ -257,7 +257,7 @@
                         <p>Latest Activities Done By The User</p>
                     </div>
                     <div class="act">
-                        <img src="../Zoz-Template-2/imgs/activity-01.png" alt="not found">
+                        <img src="../Elzero/imgs/activity-01.png" alt="not found">
                         <div class="text">
                             <div class="inf">
                                 Store
@@ -270,7 +270,7 @@
                         </div>
                     </div>
                     <div class="act">
-                        <img src="../Zoz-Template-2/imgs/activity-02.png" alt="not found">
+                        <img src="../Elzero/imgs/activity-02.png" alt="not found">
                         <div class="text">
                             <div class="inf">
                                 Academy
@@ -283,7 +283,7 @@
                         </div>
                     </div>
                     <div class="act">
-                        <img src="../Zoz-Template-2/imgs/activity-03.png" alt="not found">
+                        <img src="../Elzero/imgs/activity-03.png" alt="not found">
                         <div class="text">
                             <div class="inf">
                                 Badges
@@ -296,7 +296,7 @@
                         </div>
                     </div>
                     <div class="act">
-                        <img src="../Zoz-Template-2/imgs/activity-01.png" alt="not found">
+                        <img src="../Elzero/imgs/activity-01.png" alt="not found">
                         <div class="text">
                             <div class="inf">
                                 Store
