--- a/projects.html
+++ b/projects.html
@@ -6,17 +6,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="author" content="Ziad Wael">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/png" sizes="32x32" href="../Zoz-Template-2/imgs/avatar.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="../Elzero/imgs/avatar.png">
     <meta name="description" content="This is my page created by ziad wael">
     <title>Projects</title>
     <!-- main css file -->
-    <link rel="stylesheet" href="../Zoz-Template-2/css/main.css">
+    <link rel="stylesheet" href="../Elzero/css/main.css">
     <!-- dashboard css file -->
-    <link rel="stylesheet" href="../Zoz-Template-2/css/projects.css">
+    <link rel="stylesheet" href="../Elzero/css/projects.css">
     <!-- Frame work css file -->
-    <link rel="stylesheet" href="../Zoz-Template-2/css/framework.css">
+    <link rel="stylesheet" href="../Elzero/css/framework.css">
     <!-- Font Awesome 5 Free -->
-    <link rel="stylesheet" href="../Zoz-Template-2/css/all.min.css">
+    <link rel="stylesheet" href="../Elzero/css/all.min.css">
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;500&#038;display=swap" rel="stylesheet" />
@@ -89,7 +89,7 @@
                 <div class="icons">
                     <i class="bell fa-regular fa-bell fa-lg"></i>
                     <div class="image">
-                        <img src="../Zoz-Template-2/imgs/avatar.png" alt="profile">
+                        <img src="../Elzero/imgs/avatar.png" alt="profile">
                     </div>
                 </div>
             </header>
@@ -107,11 +107,11 @@
                             <p>Elzero Dashboard Project Design And Programming And Hosting</p>
                         </div>
                         <div class="images">
-                            <img src="../Zoz-Template-2/imgs/team-01.png" alt="not found">
-                            <img src="../Zoz-Template-2/imgs/team-02.png" alt="not found">
-                            <img src="../Zoz-Template-2/imgs/team-03.png" alt="not found">
-                            <img src="../Zoz-Template-2/imgs/team-04.png" alt="not found">
-                            <img src="../Zoz-Template-2/imgs/team-05.png" alt="not found">
+                            <img src="../Elzero/imgs/team-01.png" alt="not found">
+                            <img src="../Elzero/imgs/team-02.png" alt="not found">
+                            <img src="../Elzero/imgs/team-03.png" alt="not found">
+                            <img src="../Elzero/imgs/team-04.png" alt="not found">
+                            <img src="../Elzero/imgs/team-05.png" alt="not found">
                         </div>
                     </div>
 
@@ -140,9 +140,9 @@
                             <p>Academy Portal Project Design And Programming</p>
                         </div>
                         <div class="images">
-                            <img src="../Zoz-Template-2/imgs/team-06.jpg" alt="not found">
-                            <img src="../Zoz-Template-2/imgs/team-07.jpg" alt="not found">
-                            <img src="../Zoz-Template-2/imgs/team-08.jpg" alt="not found">
+                            <img src="../Elzero/imgs/team-06.jpg" alt="not found">
+                            <img src="../Elzero/imgs/team-07.jpg" alt="not found">
+                            <img src="../Elzero/imgs/team-08.jpg" alt="not found">
                         </div>
                     </div>
 
@@ -169,9 +169,9 @@
                             <p>Chatting Application Project Design</p>
                         </div>
                         <div class="images">
-                            <img src="../Zoz-Template-2/imgs/team-09.jpg" alt="not found">
-                            <img src="../Zoz-Template-2/imgs/team-10.jpg" alt="not found">
-                            <img src="../Zoz-Template-2/imgs/team-11.jpg" alt="not found">
+                            <img src="../Elzero/imgs/team-09.jpg" alt="not found">
+                            <img src="../Elzero/imgs/team-10.jpg" alt="not found">
+                            <img src="../Elzero/imgs/team-11.jpg" alt="not found">
                         </div>
                     </div>
 
@@ -197,10 +197,10 @@
                             <p></p>
                         </div>
                         <div class="images">
-                            <img src="../Zoz-Template-2/imgs/team-01.png" alt="not found">
-                            <img src="../Zoz-Template-2/imgs/team-08.jpg" alt="not found">
-                            <img src="../Zoz-Template-2/imgs/team-06.jpg" alt="not found">
-                            <img src="../Zoz-Template-2/imgs/team-04.png" alt="not found">
+                            <img src="../Elzero/imgs/team-01.png" alt="not found">
+                            <img src="../Elzero/imgs/team-08.jpg" alt="not found">
+                            <img src="../Elzero/imgs/team-06.jpg" alt="not found">
+                            <img src="../Elzero/imgs/team-04.png" alt="not found">
                         </div>
                     </div>
 
@@ -229,9 +229,9 @@
                             <p>Ahmed Portal Project Design And Programming</p>
                         </div>
                         <div class="images">
-                            <img src="../Zoz-Template-2/imgs/team-11.jpg" alt="not found">
-                            <img src="../Zoz-Template-2/imgs/team-07.jpg" alt="not found">
-                            <img src="../Zoz-Template-2/imgs/team-09.jpg" alt="not found">
+                            <img src="../Elzero/imgs/team-11.jpg" alt="not found">
+                            <img src="../Elzero/imgs/team-07.jpg" alt="not found">
+                            <img src="../Elzero/imgs/team-09.jpg" alt="not found">
                         </div>
                     </div>
 
@@ -258,9 +258,9 @@
                             <p>Mohamed Application Project Design</p>
                         </div>
                         <div class="images">
-                            <img src="../Zoz-Template-2/imgs/team-01.png" alt="not found">
-                            <img src="../Zoz-Template-2/imgs/team-06.jpg" alt="not found">
-                            <img src="../Zoz-Template-2/imgs/team-07.jpg" alt="not found">
+                            <img src="../Elzero/imgs/team-01.png" alt="not found">
+                            <img src="../Elzero/imgs/team-06.jpg" alt="not found">
+                            <img src="../Elzero/imgs/team-07.jpg" alt="not found">
                         </div>
                     </div>
 
@@ -286,10 +286,10 @@
                             <p>Mohamed Dashboard Project Design And Programming And Hosting</p>
                         </div>
                         <div class="images">
-                            <img src="../Zoz-Template-2/imgs/team-06.jpg" alt="not found">
-                            <img src="../Zoz-Template-2/imgs/team-08.jpg" alt="not found">
-                            <img src="../Zoz-Template-2/imgs/team-09.jpg" alt="not found">
-                            <img src="../Zoz-Template-2/imgs/team-07.jpg" alt="not found">
+                            <img src="../Elzero/imgs/team-06.jpg" alt="not found">
+                            <img src="../Elzero/imgs/team-08.jpg" alt="not found">
+                            <img src="../Elzero/imgs/team-09.jpg" alt="not found">
+                            <img src="../Elzero/imgs/team-07.jpg" alt="not found">
                         </div>
                     </div>
 
@@ -318,9 +318,9 @@
                             <p>Mohamed Portal Project Design And Programming</p>
                         </div>
                         <div class="images">
-                            <img src="../Zoz-Template-2/imgs/team-11.jpg" alt="not found">
-                            <img src="../Zoz-Template-2/imgs/team-09.jpg" alt="not found">
-                            <img src="../Zoz-Template-2/imgs/team-06.jpg" alt="not found">
+                            <img src="../Elzero/imgs/team-11.jpg" alt="not found">
+                            <img src="../Elzero/imgs/team-09.jpg" alt="not found">
+                            <img src="../Elzero/imgs/team-06.jpg" alt="not found">
                         </div>
                     </div>
 
@@ -347,9 +347,9 @@
                             <p>Ahmed Application Project Design</p>
                         </div>
                         <div class="images">
-                            <img src="../Zoz-Template-2/imgs/team-07.jpg" alt="not found">
-                            <img src="../Zoz-Template-2/imgs/team-06.jpg" alt="not found">
-                            <img src="../Zoz-Template-2/imgs/team-10.jpg" alt="not found">
+                            <img src="../Elzero/imgs/team-07.jpg" alt="not found">
+                            <img src="../Elzero/imgs/team-06.jpg" alt="not found">
+                            <img src="../Elzero/imgs/team-10.jpg" alt="not found">
                         </div>
                     </div>
 
