modify html file

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <h3>El z<span>o</span>z</h3>
             <ul>
                 <li class="active">
-                    <a href="dashboard.html">
+                    <a href="index.html">
                         <i class="fa-regular fa-chart-bar fa-fw"></i>
                         <span>Dashboard</span>
                     </a>
@@ -89,7 +89,7 @@
                 <div class="icons">
                     <i class="bell fa-regular fa-bell fa-lg"></i>
                     <div class="image">
-                        <img src="../Elzero/imgs/avatar.png" alt="profile">
+                        <a href="profile.html"><img src="../Elzero/imgs/avatar.png" alt="profile"></a>
                     </div>
                 </div>
             </header>
